# support-chat

./: .gitignore  README.md  dockerfile  issues_data.csv  pyproject.toml
.devcontainer/: devcontainer.json
data/: Google Support _ LLM From PSA Tickets - Sheet1.csv  issues_data.csv
support_chat/: anonymizer.py  app.py  chain.py  jira.py  main.py  search.py  streaming.py
