[tool.poetry]
name = "support-chat"
version = "0.1.0"
description = ""
authors = ["Jayesh Patil <jayeshvpatil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.1.5"
streamlit = "^1.31.0"
chromadb = "0.3.29"
vertexai = "^0.0.1"
google-cloud-aiplatform = "^1.41.0"
pypdf = "^4.0.1"
sentence-transformers = "^2.3.1"
docarray = "^0.40.0"
google-api-python-client = "2.95.0"
google-api-core = "2.11.1"
html2text = "^2020.1.16"
faiss-cpu = "^1.7.4"
requests = "^2.31.0"
openai = "^1.12.0"
tiktoken = "^0.6.0"
pydantic = "1.10.9"
bs4 = "^0.0.2"
presidio-analyzer = "2.2.35"
presidio-anonymizer = "2.2.35"
spacy = "^3.7.2"
en_core_web_lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1.tar.gz"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

